Fixed letter spacing and container paddings on small screens

--- a/app/assets/stylesheets/partials/_base.sass
+++ b/app/assets/stylesheets/partials/_base.sass
@@ -1,5 +1,3 @@
-$background-image: image-url("polaroid.png")
-$background-size: 56px 36px
 $background-color: #f4f4f4
 
 $slow-transition: 500ms
@@ -21,6 +19,23 @@ $low-priority: 1
 $medium-priority: 999
 $high-priority: 9999
 
+// Layouts
+$small: 568px
+$large: 1280px
+
+
+
+@mixin media-mixin( $res )
+  @if $res == handhelds
+    @media only screen and (max-width: $small)
+      @content
+  @else if $res == medium-screens
+    @media only screen and (min-width: $small + 1) and (max-width: $large - 1)
+      @content
+  @else if $res == wide-screens
+    @media only screen and (min-width: $large)
+      @content
+
 @mixin inset-text
   text-shadow: 1px 4px 6px $background-color, 0 0 0 $dark-base, 1px 4px 6px $background-color
 
@@ -35,7 +50,6 @@ $high-priority: 9999
   -ms-user-select: $type
   user-select: $type
 
-
 // Prevents broken box model annoyances.
 *
   +box-sizing(border-box)
@@ -48,6 +62,9 @@ html, body
     size: 16px
   height: 100%
   background-color: $background-color
+
+.pure-g 
+  letter-spacing: initial
 
 hr
   border: 1px solid darken($base, 5%)
@@ -90,12 +107,14 @@ strong
 .container
   //background-image(linear-gradient(lighten($base, 13%), lighten($base, 18%)))
   //background-image: $background-image
-  background-size: $background-size
-  min-height: 100%
-  width: 100%
+  // background-size: $background-size
   padding: 0 15px
+  @include media-mixin(handhelds)
+    padding: 0
 
 .wrapper
+  min-height: 100%
+  width: 100%
   padding-bottom: $footer-height
   padding-top: $header-height + 15
   
