--- a/app/assets/stylesheets/partials/_headers.sass
+++ b/app/assets/stylesheets/partials/_headers.sass
@@ -18,7 +18,7 @@ h3
   z-index: $medium-priority
   background-color: #333
   box-shadow: 0px 0px 5px #444444
-  background-size: $background-size
+  // background-size: $background-size
   a
     color: inherit
     text-decoration: none
